# indoc

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
impl/: Cargo.toml
impl/src/: lib.rs
src/: error.rs  expr.rs  lib.rs  unindent.rs
tests/: Cargo.toml  README.txt  compiletest.rs  formatdoc.rs  run-pass.rs  test.rs  test_formatdoc.rs  test_indoc.rs  test_unindent.rs  test_writedoc.rs  tests.rs
tests/compile-fail/: empty-string.rs  no-arguments.rs  no-newline.rs  non-string.rs  two-arguments.rs
tests/run-pass/: byte-string.rs  carriage-return.rs  empty-string.rs  joined-first-line.rs  joined-lines.rs  no-leading-newline.rs  one-line.rs  raw-byte-string.rs  raw-string.rs  string-trailing-newline.rs  string.rs  trailing-whitespace.rs
tests/test_cstr/: mod.rs
tests/tests/: compiletest.rs  run-pass.rs
tests/tests/ui-stable/: no-arguments.rs  no-arguments.stderr  non-lit.rs  non-lit.stderr  non-string.rs  non-string.stderr  two-arguments.rs  two-arguments.stderr
tests/tests/ui-unstable/: no-arguments.rs  no-arguments.stderr  non-lit.rs  non-lit.stderr  non-string.rs  non-string.stderr  two-arguments.rs  two-arguments.stderr  update-references.sh
tests/ui/: no-arguments.rs  no-arguments.stderr  non-lit.stderr  non-string.stderr  printdoc-binary.rs  printdoc-binary.stderr  printdoc-extra-arg.stderr  printdoc-no-arg.stderr  printdoc-no-display.stderr  printdoc-no-named-arg.stderr  three-arguments.stderr  two-arguments.rs  two-arguments.stderr
tests/ui-stable/: no-arguments.stderr  non-lit.stderr  non-string.rs  non-string.stderr  printdoc-binary.stderr  printdoc-extra-arg.stderr  printdoc-no-arg.stderr  printdoc-no-named-arg.stderr  two-arguments.stderr
tests/ui-unstable/: no-arguments.rs  no-arguments.stderr  non-lit.rs  non-lit.stderr  non-string.rs  non-string.stderr  two-arguments.rs  two-arguments.stderr
unindent/: Cargo.toml  README.md
unindent/src/: lib.rs  unindent.rs
