[package]
name = "indoc"
version = "2.0.5"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns", "text-processing", "no-std", "no-std::no-alloc"]
description = "Indented document literals"
documentation = "https://docs.rs/indoc"
edition = "2021"
keywords = ["heredoc", "nowdoc", "multiline", "string", "literal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/indoc"
rust-version = "1.56"

[lib]
proc-macro = true
doc-scrape-examples = false

[dev-dependencies]
rustversion = "1.0"
trybuild = { version = "1.0.49", features = ["diff"] }
unindent = { version = "0.2.3", path = "unindent" }

[workspace]
members = ["unindent"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
