[package]
name = "indoc"
version = "2.0.7"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns", "text-processing", "no-std", "no-std::no-alloc"]
description = "Indented document literals"
documentation = "https://docs.rs/indoc"
edition = "2021"
exclude = ["build.rs"]
keywords = ["heredoc", "nowdoc", "multiline", "string", "literal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/indoc"
rust-version = "1.60"

[lib]
proc-macro = true

[dev-dependencies]
rustversion = "1.0"
trybuild = { version = "1.0.108", features = ["diff"] }
unindent = { version = "0.2.3", path = "unindent" }

[build-dependencies]
rustversion = "1.0"

[workspace]
members = ["unindent"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
    "--extern-html-root-url=proc_macro=https://doc.rust-lang.org",
]
