[package]
name = "indoc-impl"
version = "0.2.8" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Indented document literals"
repository = "https://github.com/dtolnay/indoc"
documentation = "https://github.com/dtolnay/indoc"
keywords = ["heredoc", "nowdoc", "multiline", "string", "literal"]
readme = "README.md"

[features]
unstable = []

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5"
proc-macro2 = { version = "0.4", default-features = false }
quote = { version = "0.6", default-features = false }
syn = { version = "0.15", default-features = false, features = ["derive", "parsing", "printing"] }
unindent = { version = "0.1", path = "../unindent" }

[badges]
travis-ci = { repository = "dtolnay/indoc" }
