[package]
name = "indoc-impl"
version = "0.3.6"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Indented document literals"
repository = "https://github.com/dtolnay/indoc"
documentation = "https://docs.rs/indoc"
keywords = ["heredoc", "nowdoc", "multiline", "string", "literal"]
readme = "README.md"
edition = "2018"

[features]
unstable = []

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
unindent = { version = "0.1.3", path = "../unindent" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
