[package]
name = "unindent"
version = "0.1.5"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Remove a column of leading whitespace from a string"
repository = "https://github.com/dtolnay/indoc"
documentation = "https://github.com/dtolnay/indoc"
keywords = ["heredoc", "nowdoc", "multiline", "string", "literal"]
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "dtolnay/indoc" }
