[package]
name = "unindent"
version = "0.2.3" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["text-processing"]
description = "Remove a column of leading whitespace from a string"
documentation = "https://docs.rs/unindent"
edition = "2021"
keywords = ["heredoc", "nowdoc", "multiline", "string", "literal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/indoc"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
